fix: height overflow, consistency with gamePage

--- a/frontend/src/components/gameBoard/gameBoard.module.css
+++ b/frontend/src/components/gameBoard/gameBoard.module.css
@@ -1,5 +1,5 @@
 .background_wrapper {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   position: relative;
 }
